--- a/delivery_note.html
+++ b/delivery_note.html
@@ -52,6 +52,13 @@
         .header {
             margin-top: 50px;
         }
+        .footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -62,11 +69,7 @@
                 <header>
 
                     <div class="header">
-                        <div class="logo">
-                            <img src="index.jpeg" height="40" width="40"/>
-                        </div>
-                        <p>Powered by ORDDEL</p>
-
+                        <br>
                         <div class="heading">
                             <h1>Delivery Note</h1>
                         </div>
@@ -175,5 +178,12 @@
             </div>
         </center>
     </div>
+    <footer>
+        <div class="footer">
+            <img src="index.jpeg" height="40" width="40"/>
+            <br>
+            <span>Powered by ORDDEL</span>
+        </div>
+    </footer>
 </body>
 </html>
