--- a/delivery_note.html
+++ b/delivery_note.html
@@ -72,6 +72,8 @@
                         <br>
                         <div class="heading">
                             <h1>Delivery Note</h1>
+                            <h2>{{response.dp_business_name}}</h2>
+                            <h2>{{response.dp_business_address}}</h2>
                         </div>
                     </div>
                 </header>
@@ -99,7 +101,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    Client: {{response.client}}
+                                    Customer: {{response.client}}
                                 </td>
                                 <td>
                                     Delivery Person: {{response.delivery_person_name}}
