minor fixes on server

--- a/delivery_note.html
+++ b/delivery_note.html
@@ -140,7 +140,7 @@
                         {% for order_prod in response.order_products %}
                         <tbody>
                             <tr>
-                                <td>{{order_prod.product_name}}</td>
+                                <td style="text-align:left">{{order_prod.product_name}}</td>
                                 <td>{{order_prod.product_unit}}</td>
                                 <td>{{order_prod.purchased_qty}}</td>
 
