--- a/invoice_template.html
+++ b/invoice_template.html
@@ -146,9 +146,9 @@
                         <thead>
                             <div class="thead-border">
                                 <th>Product</th>
-                                <th>Quantity</th>
-                                <th>Unit Price</th>
-                                <th>VAT</th>
+                                <th style="width: 40px;">Quantity</th>
+                                <th style="width: 40px;">Unit Price</th>
+                                <th style="width: 40px;">VAT</th>
                                 <th>Amount</th>
                             </div>
                         </thead>
@@ -157,13 +157,13 @@
                         <tbody>
                             <tr>
                                 <td style="text-align:left">{{order_prod.product_name}}</td>
-                                <td style="text-align:right">{{order_prod.purchased_qty}}</td>
+                                <td>{{order_prod.purchased_qty}}</td>
                                 <td>&pound; {{order_prod.unit_sales_price}}</td>
                                 <td>&pound; {{order_prod.vat_amount}}</td>
                                 {% if order_prod.amount == 0.0 %}
                                     <td>&pound; 00</td>
                                 {% else %}
-                                    <td style="text-align:right">&pound; {{order_prod.amount}}</td>
+                                    <td>&pound; {{order_prod.amount}}</td>
 
                                 {% endif %}
 
@@ -178,10 +178,10 @@
                         <tfoot id='total'>
                             <tr>
                                 <td><b>Total</b></td>
-                                <td style="text-align:right"><b>{{response.total_qty}}</b></td>
+                                <td><b>{{response.total_qty}}</b></td>
                                 <td>       </td>
                                 <td> &pound; <b>{{response.total_vat}}</b></td>
-                                <td style="text-align:right"> &pound; <b>{{response.total_amount}}</b></td>
+                                <td> &pound; <b>{{response.total_amount}}</b></td>
 
                             </tr>
                         </tfoot>
