supplier name field in API

--- a/delivery_note.html
+++ b/delivery_note.html
@@ -169,9 +169,9 @@
                     <div class="thank_you_note">
                         <p>
                             <b>
-                                Thank You for choosing {{response.delivery_person_name}}.
-                                If you want more services kindly order again.
-                                We'll surely cater you..!
+                                Thank you for the business with {{response.delivery_person_name}}. 
+                                We look forward for more orders and long-term business relation. 
+                                Please tell your friends about ORDDEL App.
                             </b>
                         </p>
                     </div>
