--- a/delivery_note.html
+++ b/delivery_note.html
@@ -196,7 +196,7 @@
     </div>
     <footer>
         <div class="footer">
-            <img src="index.jpeg" height="40" width="40"/>
+            <img src="orddel-logo-01.png" height="40" width="40"/>
             <br>
             <span>Powered by ORDDEL</span>
         </div>
